simple bot library built on djs

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/rekkyrek/scripcord/issues"
   },
-  "homepage": "https://github.com/rekkyrek/scripcord#readme"
+  "homepage": "https://github.com/rekkyrek/scripcord#readme",
+  "dependencies": {
+    "discord.js": "^11.5.1"
+  }
 }
