--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "mongoose": "^5.6.1",
+    "node-fetch": "^2.6.0",
     "vm2": "^3.8.2"
   }
 }
